--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<div style='padding: 30px 0' id='root'></div>
+<div id='root'></div>
 </body>
 </html>
